<resources>
    <string name="app_name">About-You</string>

    <!--Engineers-->
    <string name="engineers_screen_title">Engineers at Glucode</string>
    <string name="engineers_menu_title">Filter by</string>
    <string name="engineers_menu_years">Rank users by years</string>
    <string name="engineers_menu_coffees">Rank users by coffees</string>
    <string name="engineers_menu_bugs">Rank users by bugs</string>

    <!--About-->
    <string name="about_screen_title">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="years">Years</string>
    <string name="coffees">Coffees</string>
    <string name="bugs">Bugs</string>
</resources>