<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/file"
        android:icon="@drawable/ic_filter"
        android:title="@string/engineers_menu_title"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_years"
                android:title="@string/engineers_menu_years"
                android:icon="@drawable/ic_time"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_coffees"
                android:icon="@drawable/ic_coffee"
                android:title="@string/engineers_menu_coffees"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_bugs"
                android:icon="@drawable/ic_bug"
                android:title="@string/engineers_menu_bugs"
                app:showAsAction="never" />
        </menu>

    </item>
</menu>